--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -1,3 +1,4 @@
+include ../utils/mixins
 block variables
 
 doctype html
@@ -11,8 +12,9 @@ html(lang='en')
     body(class=pageClass)
         .wrapper
             #app
+            include ../includes/modules/header
                 .content-wrapper
                     block content
-
+            include ../includes/modules/footer  
 
 
