--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,13 +10,6 @@ block variables
 block content
         section
             .container
-                h1 Jade - node template engine
-                p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore recusandae sunt, harum suscipit dolorum nobis, beatae aperiam enim ea, iure labore nihil ipsa laboriosam porro esse reiciendis amet. Illum, beatae.
-        section
-            .container
-                h1 Jade - node template engine
-                p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore recusandae sunt, harum suscipit dolorum nobis, beatae aperiam enim ea, iure labore nihil ipsa laboriosam porro esse reiciendis amet. Illum, beatae.
-        section
-            .container
-                h1 Jade - node template engine
-                p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore recusandae sunt, harum suscipit dolorum nobis, beatae aperiam enim ea, iure labore nihil ipsa laboriosam porro esse reiciendis amet. Illum, beatae.
+             +item('item title', 'item descr')
+             +item('item title', 'item descr')
+             +item('item title', 'item descr')
