--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,6 +6,7 @@ block variables
     -var title = 'Webpack + Pug'
     -var discription = 'discription for Webpack + Pug'
     -var pageClass = 'index-page'
+    -var icon = 'icon'
 
 block content
         section
