--- a/src/assets/scss/modules/header.scss
+++ b/src/assets/scss/modules/header.scss
@@ -1,3 +1,15 @@
-.header {
-    color: #777;
+@include b(header) {
+    @include flex;
+    @include flex-direction(row);
+    @include flex-align(space-around, center);
+    flex: 1 1 auto;
+    width: 100%;
+    @include e(layout) {
+        @include flex;
+        @include flex-direction(column);
+        @include flex-align(left, center);
+        @include m(row) {
+            @include flex-direction(row);
+        }
+    }
 }
