--- a/src/assets/scss/utils/mixins.scss
+++ b/src/assets/scss/utils/mixins.scss
@@ -1,8 +1,67 @@
 /* Mixins:
    ========================================================================== */
 
+$elementSeparator: '__';
+$modifierSeparator: '--';
+@function containsModifier($selector) {
+    $selector: selectorToString($selector);
+    @if str-index($selector, $modifierSeparator) {
+        @return true;
+    }
+    @else {
+        @return false;
+    }
+}
+
+@function selectorToString($selector) {
+    $selector: inspect($selector); //cast to string
+    $selector: str-slice($selector, 2, -2); //remove brackets
+    @return $selector;
+}
+
+@function getBlock($selector) {
+    $selector: selectorToString($selector);
+    $modifierStart: str-index($selector, $modifierSeparator) - 1;
+    @return str-slice($selector, 0, $modifierStart);
+}
+
+@mixin b($block) {
+    .#{$block} {
+        @content;
+    }
+}
+
+@mixin e($element) {
+    $selector: &;
+    @if containsModifier($selector) {
+        $block: getBlock($selector);
+        @at-root {
+            #{$selector} {
+                #{$block+$elementSeparator+$element} {
+                    @content;
+                }
+            }
+        }
+    }
+    @else {
+        @at-root {
+            #{$selector+$elementSeparator+$element} {
+                @content;
+            }
+        }
+    }
+}
+
+@mixin m($modifier) {
+    @at-root {
+        #{&}#{$modifierSeparator+$modifier} {
+            @content;
+        }
+    }
+}
+
 // px to rem
-@function rem($pixels, $context: $mainFontSize) {
+@function rem($pixels, $context: $base-fontSize) {
     @if (unitless($pixels)) {
         $pixels: $pixels * 1px;
     }
@@ -10,12 +69,6 @@
         $context: $context * 1px;
     }
     @return $pixels / $context * 1rem;
-}
-
-// size to one line
-@mixin size($width, $height: $width) {
-    width: $width;
-    height: $height;
 }
 
 // placeholder helper
@@ -34,31 +87,6 @@
     }
 }
 
-
-/* Fonts Helpers:
-     Read more: https://github.com/vedees/webpack-template/blob/master/README.md#add-fonts
-     ========================================================================== */
-
-
-/*
-    By default template support only modern format fonts
-    Without svg. Only: .woff, .woffs
-    if ypu need svg comments lines bellow and uncomments "Fonts helper all format fonts"
-    Usage:
-      1. Put your font to `src/assets/fonts/FOLDERNAME/FONTNAME`
-        FOLLOW: Files Required
-        Example: .woff, .woffs formats
-      2. Go to fonts.scss
-      3. Use mixon
-        Example: @include font-face("OpenSans", "../fonts/OpenSans/opensans");
-      Required parameters: @family, @family
-      Minor parameters: @weight, @style, @pipeline
-      Example Base:
-        @include font-face("OpenSans", "../fonts/OpenSans/opensans");
-      Example Situation:
-        @include font-face("OpenSans", "../fonts/OpenSans/opensansItalic", 400, italic);
-  */
-
 // Default: For modern format fonts
 // Files Required: .woff, .woffs
 @mixin font-face( $font-family, $file-path, $weight: normal, $style: normal, $asset-pipeline: false) {
@@ -70,44 +98,3 @@
         url("#{$file-path}.woff2") format("woff2");
     }
 }
-
-// For Modern format fonts + .svg
-// Files Required: .woff, .woffs, .svg
-// @mixin font-face(
-//   $font-family,
-//   $file-path,
-//   $weight: normal,
-//   $style: normal,
-//   $asset-pipeline: false
-// ) {
-//   @font-face {
-//     font-family: $font-family;
-//     font-weight: $weight;
-//     font-style: $style;
-//     src: url("#{$file-path}.eot?#iefix") format("embedded-opentype"),
-//       url("#{$file-path}.woff") format("woff"),
-//       url("#{$file-path}.woff2") format("woff2"),
-//       url("#{$file-path}.svg") format("svg"),
-//       url("#{$file-path}.ttf") format("truetype");
-//   }
-// }
-// For Modern format fonts + .svg
-// Files Required: eot. .woff, .woffs, .svg, .ttf
-// @mixin font-face(
-//   $font-family,
-//   $file-path,
-//   $weight: normal,
-//   $style: normal,
-//   $asset-pipeline: false
-// ) {
-//   @font-face {
-//     font-family: $font-family;
-//     font-weight: $weight;
-//     font-style: $style;
-//     src: url("#{$file-path}.eot?#iefix") format("embedded-opentype"),
-//       url("#{$file-path}.woff") format("woff"),
-//       url("#{$file-path}.woff2") format("woff2"),
-//       url("#{$file-path}.svg") format("svg"),
-//       url("#{$file-path}.ttf") format("truetype");
-//   }
-// }
