--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,13 +4,13 @@ extends ../layout/main
 block variables
 
     -var title = 'Webpack + Pug'
-    -var discription = 'discription for Webpack + Pug'
-    -var pageClass = 'index-page'
-    -var icon = 'icon'
+    //- -var discription = 'discription for Webpack + Pug'
+    //- -var pageClass = 'index-page'
+    //- -var icon = 'icon'
 
-block content
-        section
-            .container
-             +item('item title', 'item descr')
-             +item('item title', 'item descr')
-             +item('item title', 'item descr')
+//- block content
+//-         section
+//-             .container
+//-              +item('item title', 'item descr')
+//-              +item('item title', 'item descr')
+//-              +item('item title', 'item descr')
